--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/react": "12.0.0",
     "@testing-library/user-event": "13.2.1",
     "@types/axios": "^0.14.0",
+    "@types/react-router-dom": "^5.3.3",
     "antd": "4.18.7",
     "axios": "0.26.0",
     "classnames": "2.3.1",
@@ -59,7 +60,6 @@
     "@types/react": "17.0.20",
     "@types/react-dom": "17.0.9",
     "@types/react-redux": "7.1.22",
-    "@types/react-router-dom": "5.3.3",
     "@types/react-test-renderer": "17.0.1",
     "@types/redux-form": "8.3.3",
     "@types/uuid": "8.3.4"
