--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "react-scripts": "5.0.0",
     "react-test-renderer": "17.0.2",
     "redux": "4.1.2",
-    "redux-form": "8.3.8",
+    "redux-form": "^8.3.10",
     "redux-thunk": "^2.4.2",
     "reselect": "4.1.5",
     "typescript": "4.4.2",
@@ -61,8 +61,7 @@
     "@types/react-dom": "17.0.9",
     "@types/react-redux": "7.1.22",
     "@types/react-test-renderer": "17.0.1",
-    "@types/redux-form": "8.3.3",
+    "@types/redux-form": "^8.3.5",
     "@types/uuid": "8.3.4"
   }
 }
-
